Added UI for viewing lessons and downloading content/homeworks. TODO: add functionality for adding homeworks and viewing marks.

--- a/VirtualClassroom.StudentClient/VirtualClassroom.StudentClient.csproj
+++ b/VirtualClassroom.StudentClient/VirtualClassroom.StudentClient.csproj
@@ -124,10 +124,16 @@
     <None Include="Service References\StudentServiceReference\StudentService2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.File.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Lesson.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Student.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Subject.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
   </ItemGroup>
