Updated to support the new way of getting marks by student.

--- a/VirtualClassroom.StudentClient/VirtualClassroom.StudentClient.csproj
+++ b/VirtualClassroom.StudentClient/VirtualClassroom.StudentClient.csproj
@@ -140,6 +140,9 @@
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Lesson.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Mark.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Student.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
