Uses views for faster data receiving. Uses PasswordBox for password.

--- a/VirtualClassroom.StudentClient/VirtualClassroom.StudentClient.csproj
+++ b/VirtualClassroom.StudentClient/VirtualClassroom.StudentClient.csproj
@@ -138,22 +138,22 @@
     <None Include="Service References\StudentServiceReference\StudentService2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\StudentServiceReference\StudentService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.File.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Homework.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Lesson.datasource">
+    <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.LessonView.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Mark.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Student.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\StudentServiceReference\VirtualClassroom.StudentClient.StudentServiceReference.Subject.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
   </ItemGroup>
